corrected spelling mistakes in readme, fixed broken link in HTML, continued trying to fix spacing in CSS

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -1,10 +1,11 @@
-/* applied to all*/
+/* This section of rules is applied to all. */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
-/* general style */
+
+/* This section defines the general style within the body. */
 body {
     background-color: #d9dcd6;
 }
@@ -36,10 +37,10 @@ header nav {
 header nav ul {
     list-style-type: none;
 }
-
+/*Increased the margin-left but the spacing is still wrong.*/
 header nav ul li {
     display: inline-block;
-    margin-left: 25px;
+    margin-left: 180px;
 }
 
 a {
@@ -47,7 +48,8 @@ a {
     text-decoration: none;
 }
 
-p {
+h3,
+h4 {
     font-size: 16px;
 }
 
@@ -86,7 +88,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-/* consolidated selectors, todo: make font weight normal */
+/* consolidated selectors, todo: make font weight normal? */
 .benefit-lead, .benefit-brand, .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
